Fix conflicting agent instructions and stale workflow guidance (#19541)